--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>contact me</h1>
+<p>This page is to learn something about ruby on rails. Usually i work with wordpress like <a href = "http://www.perwinroth.com">perwinroth.com<a> and even then i suck</p>
