--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>This is pelles sample app</h1>
+<p>This page is to learn something about ruby on rails. Usually i work with wordpress like <a href = "http://www.perwinroth.com">perwinroth.com<a> and even then i suck</p>
+
