--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
-<h1>This is pelles sample app</h1>
-<p>This page is to learn something about ruby on rails. Usually i work with wordpress like <a href = "http://www.perwinroth.com">perwinroth.com<a> and even then i suck</p>
+<h1>This is pelles Mantaee Fansite</h1>
+<p>This page is to learn something about ruby on rails and Manatees. Usually i work with wordpress like <a href = "http://www.perwinroth.com">perwinroth.com</a> and even then i suck. But im really enjoying this and getting better. Hopefully.</p>
 
+<p>
+<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+
+</p>
